--- a/assets/base.css
+++ b/assets/base.css
@@ -1,2 +1,10 @@
 @import 'tailwindcss';
 @import '@nuxt/ui';
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 100 900;
+  src: url('/static/inter-variable.woff2') format('woff2');
+  font-display: swap;
+}
