--- a/assets/base.css
+++ b/assets/base.css
@@ -6,5 +6,11 @@
   font-style: normal;
   font-weight: 100 900;
   src: url('/static/inter-variable.woff2') format('woff2');
+  /* src: url('/static/inter-variable.ttf') format('ttf'); */
   font-display: swap;
+}
+
+body {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
 }
