--- a/assets/base.css
+++ b/assets/base.css
@@ -14,3 +14,20 @@ body {
   font-family: 'Inter', sans-serif;
   font-weight: 400;
 }
+
+@media print {
+  @page {
+    margin: 0.5in;
+  }
+
+  html {
+    font-size: 10pt;
+  }
+
+  body {
+    background-color: white;
+    color: #000;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+  }
+}
